refactor: 将技能内部存储收敛为24表并保护聚合引用